--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
 dependencies:
   flutter_web: any
   flutter_web_ui: any
+  firebase: ^5.0.4
+  jaguar_jwt: ^2.1.6
 
 dev_dependencies:
-  build_runner: ^1.4.0
-  build_web_compilers: ^2.0.0
+  build_runner: ^1.6.2
+  build_web_compilers: '>=1.0.0 <2.0.0'
   pedantic: ^1.0.0
 
 dependency_overrides:
